# aoc

./: README.md  go.work  main.go
aoc/: readfile.go
go-aoc/: go.mod  main.go
go-aoc/2022/: aoc.go  day1.go  day2.go  go.mod  main.go
go-aoc/2022/aoc/: day1.go  day2.go
go-aoc/2023/: aoc.go  day5.go
go-aoc/aoc/: aoc.go  day1.go
go-aoc/utils/: readfile.go
ocaml_aoc/: dune-project  ocaml_aoc.opam
ocaml_aoc/lib/: dune
ocaml_aoc/lib/2022/: day4.ml  day5.ml  dune
ocaml_aoc/lib/2023/: day1.ml  day2.ml  day3.ml  day4.ml  day5.ml  day6.ml  day7.ml  day8.ml  day9.ml  dune
ocaml_aoc/lib/Helper/: dune  helper.ml
rust-aoc/src/: main.rs
rust-aoc/src/aoc/: day1.rs  day3.rs  mod.rs
rust-aoc/src/year_2022/: day1.rs  day3.rs  mod.rs  readfile.rs
